I added image, link, and list

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<!-- <script type="text/javascript" src="./js/lab.js" DEFER></script> -->
 </head>
 <body>
+	<a href="https://en.wikipedia.org/wiki/Ocean" target="_new">
+	<img id="ocean-photo" src="img/pexels-enrique-hoyos-2887497.jpg" alt="photo of ocean with bird"/></a>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
@@ -29,6 +31,12 @@
 					<p>I'm trying idk</p>
 					<p>Oooooh a second paragraph</p>
 					<p>I want to change the fonts and colors!!!!!!</p>
+					<p>List of reasons i'm tired:</p> 
+					<ul>
+						<li>i woke up at 6:30</li>
+						<li>i have not had coffee</li>
+						<li>there's too much to do</li>
+					</ul>
 			</div>
 
 		</section>
