--- a/index.html
+++ b/index.html
@@ -18,15 +18,12 @@
 	<!-- <script type="text/javascript" src="./js/lab.js" DEFER></script> -->
 </head>
 <body>
-	<a href="https://en.wikipedia.org/wiki/Ocean" target="_new">
-	<img id="ocean-photo" src="img/pexels-enrique-hoyos-2887497.jpg" alt="photo of ocean with bird"/></a>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
 			<h1>Phoebe's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
 					<h2>About Me</h2>
 					<p>I'm trying idk</p>
 					<p>Oooooh a second paragraph</p>
@@ -37,6 +34,11 @@
 						<li>i have not had coffee</li>
 						<li>there's too much to do</li>
 					</ul>
+					<div class="digression">
+						<p>*this is true for most days</p>
+						<a href="https://en.wikipedia.org/wiki/Ocean" target="_new">
+							<img id="ocean-photo" src="img/pexels-enrique-hoyos-2887497.jpg" alt="photo of ocean with bird"/></a>
+					</div>
 			</div>
 
 		</section>
