--- a/lab2/index.html
+++ b/lab2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 2 HTML & CSS Starter - Subject/Topic</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,25 +23,21 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
-			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+		
+			<h1>Hello World</h1>
+			<p>We are Phoebe and Harry and this is Lab 2. </p>
+			<div class="Phoebe_Rettberg">
+					<h2>Phoebe Rettberg</h2>
+					<p>Hi, I'm Phoebe (she/her)! I'm a second year Film and Digital Media major. I don't have much experience with coding but I'm excited to learn! Especially CSS because I love fonts and colors lol.</p>
 			</div>
 
-			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+			<div class="Harry_Chou">
+					<h2>Harry Chou</h2>
+					<p>Hi! I'm Harry, fourth year AGPM major, he/him. I have expriences in HTML/CSS/JS, a bit...... I like to game, play piano, and cook.</p>
 			</div>
 
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
+			<div class="raccoon">
+					<img id="raccoon_hehehe" src="img/he-he-he-raccoon.gif" alt="raccoon smile deviously???"/></a>
 			</div>
 		</section>
 		<nav id="links">
