changes to lab2

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -23,8 +23,8 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-		
-			<h1>Hello World</h1>
+			<h1>Hello World!</h1>
+			<audio src="./audio/Clair.mp3" controls></audio>
 			<p>We are Phoebe and Harry and this is Lab 2. </p>
 			<div class="Phoebe_Rettberg">
 					<h2>Phoebe Rettberg</h2>
