changes to homepage and lab 3

--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
 	<main id="content">
 		<section>
 			<h1>Phoebe's Homepage</h1>
+			<div class="labs">
+				<p>My Labs from this quarter:</p> 
+					<ul>
+						<li><a href="lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
+						<li><a href="lab3/index.html">Lab 3 File Structures</a></li>
+						<li><a href="lab4/index.html">Lab 4 Psuedo Coding and Problem-solving</a></li>
+						<li><a href="lab5/index.html">Lab 5 Data Types and Variables</a></li>
+						<li><a href="lab6/index.html">Lab 6 Arrays and Objects</a></li>
+					</ul>
+			</div>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
 					<h2>About Me</h2>
-					<p>I'm trying idk</p>
-					<p>Oooooh a second paragraph</p>
-					<p>I want to change the fonts and colors!!!!!!</p>
-					<p>List of reasons i'm tired:</p> 
-					<ul>
-						<li>i woke up at 6:30</li>
-						<li>i have not had coffee</li>
-						<li>there's too much to do</li>
-					</ul>
-					<div class="digression">
-						<p>*this is true for most days</p>
+					<img id="photo-of-me" src="img/photo-of-me.jpeg" />
+					<p>I'm a second year Film and Digital Media major, though I am considering adding a double major in Feminist Studies. Those pretty much encapsulate my insterests, though my roomates say I also talk about Tonya Harding a lot.</p>
 						<a href="https://en.wikipedia.org/wiki/Ocean" target="_new">
 							<img id="ocean-photo" src="img/pexels-enrique-hoyos-2887497.jpg" alt="photo of ocean with bird"/></a>
-					</div>
 			</div>
 
 		</section>
