changes to lab 3

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3 - File Sturcture and File Transfer</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
 	<!-- Set viewport so page remains consistently scaled w narrow devices -->
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	
 	<!-- Lab-specifc CSS file for any special styling of this particular page -->
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	
@@ -23,25 +21,26 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 3 - File Structure and File Transfer</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>For this lab we had to create work with our local file structure and the the index.html files.</p>
 			</div>
 
 			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<h2>Challenges</h2>
+					<p>The main challenges where keeping track of the files and where they were stored. Things like remembering to source the image  when adding the selfie or even to change the number associated iwth each lab links were just new details that I haven't gotten quite used to looking out for. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>Overall I think this assignment has gone very well, there's still a couple things that take some time to get exactly right but it all feels very familiar. I've begun to feel much more confident in my ability to use html and even when I'm not sure what to do, I'm much more able to reference other code to try and udnerstand my options.  </p>
 			</div>
-
+			
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<div><img id="output"  src="img/html-homepage.png" /></div>
+					
 			</div>
 		</section>
 		<nav id="links">
