--- a/index.html
+++ b/index.html
@@ -25,18 +25,21 @@
 			<div class="labs">
 				<p>My Labs from this quarter:</p> 
 					<ul>
-						<li><a href="lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
-						<li><a href="lab3/index.html">Lab 3 File Structures</a></li>
-						<li><a href="lab4/index.html">Lab 4 Psuedo Coding and Problem-solving</a></li>
-						<li><a href="lab5/index.html">Lab 5 Data Types and Variables</a></li>
-						<li><a href="lab6/index.html">Lab 6 Arrays and Objects</a></li>
+						<li><a class="lab-link" href="lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
+						<li><a class="lab-link" href="lab3/index.html">Lab 3 File Structures</a></li>
+						<li><a class="lab-link" href="lab4/index.html">Lab 4 Psuedo Coding and Problem-solving</a></li>
+						<li><a class="lab-link" href="lab5/index.html">Lab 5 Data Types and Variables</a></li>
+						<li><a class="lab-link" href="lab6/index.html">Lab 6 Arrays and Objects</a></li>
 					</ul>
 			</div>
 			<div class="minor-section">
-					<!-- Note that all filenames use lowercase and no spaces -->
 					<h2>About Me</h2>
-					<img id="photo-of-me" src="img/photo-of-me.jpeg" />
 					<p>I'm a second year Film and Digital Media major, though I am considering adding a double major in Feminist Studies. Those pretty much encapsulate my insterests, though my roomates say I also talk about Tonya Harding a lot.</p>
+			</div>
+			<div class="photo-box">
+					<img id="photo-of-me" src="img/photo-of-me.jpeg" />
+			</div>
+			<div>
 						<a href="https://en.wikipedia.org/wiki/Ocean" target="_new">
 							<img id="ocean-photo" src="img/pexels-enrique-hoyos-2887497.jpg" alt="photo of ocean with bird"/></a>
 			</div>
