--- a/lab4/index.html
+++ b/lab4/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 4- Psuedocoding and Problem-solving</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,24 +23,55 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 4- Psuedocoding and Problem-solving</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>For this lab we had to practice psuedocoding with both everyday tasks and simple computer games. We also had to practice commenting in js and using both html and css.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>It was for the most part pretty straightforward, I think the biggest problem I experienced was doubting if the language I was using for the psuedocode was correct. I think as I gain more familiarity with psuedocoding, the conventions will become more obvious.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
+					<p>Task 1:</p>
+					<p>Lighting a candle:</p>
+					<ul>
+						<li>Find a candle and a matchbook</li>
+						<li>Light the match
+						<ul>
+							<li>Take the match out</li>
+							<li>Press the match head on the striker</li>
+							<li>Quickly swipe the match head against the striker</li>
+						</ul>
+					<li>Light the candle
+						<ul>
+							<li>Hold the head of the match against the candle wick</li>
+							<li>Once the wick is lit, pull the match away</li>
+						</ul>
+					<li>Blow out the match</li>
+					</ul>
+					<img id="peg-solitaire" src="img/peg-solitaire.jpeg"/>
+					<p>Task 2:</p>
+					<p>Peg Solitaire:</p>
+					</p><pre><code>
+						//Print board before each turn
+ 							 //print a row of 1
+  								//print a row of 2
+  								//and so on, until 5
+  								//each row, but row 1, has a pin
+						//Accept user input
+  							 //selected pin, jumps to selected empty space
+ 							 //must have an existing pin to jump over
+						//Validate user move
+ 							 //jumped pin is removed
+						//Test for win! Condition
+  							 //all but one pin has been removed
+					</code></pre>
+					
+
 					<div id="output"></div>
 			</div>
 		</section>
