--- a/lab5/index.html
+++ b/lab5/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5 - Data Types and Variable</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,25 +23,23 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 5 - Data Types and Variable</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>For this lab we had to experiment with js variables.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>I didn't really face any problems with this lab (we'll see how the upload/debugging goes), it just takes some precesion and attention to detail. I would sometimes forget the semicolons or pluss signs between variables, but in VSCode thats easy to fix. </p>
 			</div>
 
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
+			<div class="minor-section" id="results">
+				    <img id="ford-fusion" src="img/ford-fusion.jpeg" />
+					<h2>Results/Script Output</h2>
+					<div class=output>
+        				<script type="text/javascript" src="js/lab.js"></script>
+					</div>
 			</div>
 		</section>
 		<nav id="links">
