--- a/lab6/index.html
+++ b/lab6/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 6 - Arrays and Objects</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,25 +23,25 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 6 - Arrays and Objects</h1>
+
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>For this lab we had to declare both an array and object in our console and then in our js file.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>The biggest problem was if I missed a period, forward slash, semicolon, or something else along those lines the entire code wouldn't work, or would just come out weird. It required some attention to detail and patience but overall wasn't too challenging!</p>
 			</div>
 
 			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
-			<div class="minor-section">
+				<img id="ford-fusion" src="img/ford-fusion2.jpeg" />
 					<h2>Results</h2>
-					<div id="output"></div>
+					<div id="output">
+							<h2>Script Output</h2>
+							<script src="js/lab.js"></script>
+					</div>
 			</div>
 		</section>
 		<nav id="links">
