--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 						<li><a class="lab-link" href="lab5/index.html">Lab 5 Data Types and Variables</a></li>
 						<li><a class="lab-link" href="lab6/index.html">Lab 6 Arrays and Objects</a></li>
 						<li><a class="lab-link" href="lab7/index.html">Lab 7 Functions</a></li>
+						<li><a class="lab-link" href="lab8/index.html">Lab 8 Anon Functions and Callbacks</a></li>
 					</ul>
 			</div>
 			<div class="minor-section">
