--- a/lab8/index.html
+++ b/lab8/index.html
@@ -51,7 +51,7 @@
                         var squared = results.map(function (x) {
                             return x * x;
                         });
-                        writeToHTML(squaredjoin(", "));
+                        writeToHTML(squared.join(", "));
                         writeToHTML("That's not right either, math sucks!");
                     </script>
                 </div>
