--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 						<li><a class="lab-link" href="lab6/index.html">Lab 6 Arrays and Objects</a></li>
 						<li><a class="lab-link" href="lab7/index.html">Lab 7 Functions</a></li>
 						<li><a class="lab-link" href="lab8/index.html">Lab 8 Anon Functions and Callbacks</a></li>
+						<li><a class="lab-link" href="lab9/index.html">Lab 9 Libraries & jQuery</a></li>
 					</ul>
 			</div>
 			<div class="minor-section">
