--- a/lab9/index.html
+++ b/lab9/index.html
@@ -24,6 +24,9 @@
                     <h2>???????</h2>
                     <p>?????</p>
                 </div>
+                <div>
+                    <a class= js-link href="https://phoebe-rett.github.io/art101/lab9/js/lab.js">JS link!</a>
+                </div>
             </section>
         </main>
     </body>
