--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 						<li><a class="lab-link" href="lab7/index.html">Lab 7 Functions</a></li>
 						<li><a class="lab-link" href="lab8/index.html">Lab 8 Anon Functions and Callbacks</a></li>
 						<li><a class="lab-link" href="lab9/index.html">Lab 9 Libraries & jQuery</a></li>
+						<li><a class="lab-link" href="lab10/index.html">Lab 10: JavaScript for the Web</a></li>
 					</ul>
 			</div>
 			<div class="minor-section">
