--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 						<li><a class="lab-link" href="lab8/index.html">Lab 8 Anon Functions and Callbacks</a></li>
 						<li><a class="lab-link" href="lab9/index.html">Lab 9 Libraries & jQuery</a></li>
 						<li><a class="lab-link" href="lab10/index.html">Lab 10: JavaScript for the Web</a></li>
+						<li><a class="lab-link" href="lab11/index.html">Lab 11: JavaScript Events and Forms</a></li>
 					</ul>
 			</div>
 			<div class="minor-section">
