--- a/lab11/index.html
+++ b/lab11/index.html
@@ -34,7 +34,7 @@
                 
                 <button id="submit">Submit</button>
 
-                <div class="minor-section" id="output"> 
+                <div class="minor-section" id="output-two"> 
                     <h2>Here's your new name (bonus):</h2>
                     <p> </p>
                 </div>
