--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 						<li><a class="lab-link" href="lab10/index.html">Lab 10: JavaScript for the Web</a></li>
 						<li><a class="lab-link" href="lab11/index.html">Lab 11: JavaScript Events and Forms</a></li>
 						<li><a class="lab-link" href="lab12/index.html">Lab 12: Conditionals</a></li>
+						<li><a class="lab-link" href="lab13/index.html">Lab 13: Loops</a></li>
 					</ul>
 			</div>
 			<div class="minor-section">
