--- a/lab14/index.html
+++ b/lab14/index.html
@@ -12,13 +12,13 @@
                 
                 <div class="minor-section">
                     <h2>Challenge</h2>
-                    <p>...</p>
+                    <p>For this lab we had to look back at our old work and debug anything that needed it.</p>
                
                     <h2>Problems</h2>
-                    <p>...</p>
+                    <p>The biggest thing I ran into was in the earlier JS labs I would have the JS linked in both the head and body of my HTML, which would read as an error in the console. Other than that I took this as an opportunity to refactor some old code and fix minor issues.</p>
 
                     <h2>Results</h2>
-                    <p>...</p>
+                    <p>A bug free website!</p>
 
                     <h2>Debug</h2>
                     <p>...</p>
