--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 						<li><a class="lab-link" href="lab12/index.html">Lab 12: Conditionals</a></li>
 						<li><a class="lab-link" href="lab13/index.html">Lab 13: Loops</a></li>
 						<li><a class="lab-link" href="lab14/index.html">Lab 14: Debugging Tools & Strategies</a></li>
+						<li><a class="lab-link" href="lab15/index.html">Lab 15: AJAX</a></li>
 					</ul>
 			</div>
 			<div class="minor-section">
