--- a/lab15/index.html
+++ b/lab15/index.html
@@ -12,16 +12,23 @@
                 
                 <div class="minor-section">
                     <h2>Challenge</h2>
-                    <p></p>
+                    <p>For this lab we had to experiment with APIs and AJAX. I used the jService Jeopardy API.</p>
                
                     <h2>Problems</h2>
-                    <p></p>
+                    <p>I wanted to have a button to reveal a question and a second button to reveal the corresponding answer, and have it be a new randomly generated question each time. This was a little challening so I used ChatGPT to come up with a function to randomly generate numbers.</p>
 
                     <h2>Results</h2>
-                    <p></p>
+                    <p>Click the question button below to quiz yourself, and then click the answer button to see how you did!</p>
+                </div>
 
-                    <h2>Debug</h2>
-                    <p>...</p>
+                <div class="minor-section" id="output1">
+                    <p></p>
+                    <button id="question">Question</button>
+                </div>
+
+                <div class="minor-section" id="output2">
+                    <p></p>
+                    <button id="answer">Answer</button>
                 </div>
 
                 <div>
