--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 						<li><a class="lab-link" href="lab13/index.html">Lab 13: Loops</a></li>
 						<li><a class="lab-link" href="lab14/index.html">Lab 14: Debugging Tools & Strategies</a></li>
 						<li><a class="lab-link" href="lab15/index.html">Lab 15: AJAX</a></li>
+						<li><a class="lab-link" href="lab16/index.html">Lab 16: JSON and APIs</a></li>
 					</ul>
 			</div>
 			<div class="minor-section">
