--- a/lab16/index.html
+++ b/lab16/index.html
@@ -11,6 +11,8 @@
                 <h1>Lab 16: JSON and APIs</h1>
                 
                 <div class="minor-section">
+                    <p>Make sure CORS unblock browser extension is enabled!!!</p>
+
                     <h2>Challenge</h2>
                     <p>For this lab we had to be able to use .ajax to get the data from an api and output the results in out html. The bonus task required us to use buttons to pull up previous comics from the api.</p>
                
